# CppAidKit

./: .clang-format  .gitignore  .gitmodules  AidKit.pro  AidKitImages.qrc  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  lgpl.txt  qdoc_configuration.qdocconf  qt_creator_lgpl_license_template.txt  vcpkg.json
candidates/: Path.cpp  Path.hpp  PathTest.cpp
cmake/: AidKit.cmake  add_gcc_compile_options.cmake  aidkit_build_options.cmake  aidkit_common_options.cmake  aidkit_options.cmake  aidkittest_options.cmake  all_options.cmake  clang_options.cmake  cmake_options.cmake  cpp_options.cmake  gcc_clang_options.cmake  gcc_compile_options.cmake  gcc_coverage_options.cmake  gcc_options.cmake  general_cmake_options.cmake  glibc_options.cmake  googletest.cmake  libcxx_options.cmake  library_options.cmake  libstdc++_options.cmake  libstdcxx_options.cmake  msvc_options.cmake  output_options.cmake  platform.cmake  qt_options.cmake  report.cmake  rpath_options.cmake  set_general_cmake_options.cmake  vcpkg_options.cmake
config/: offline.css  qdoc_configuration.qdocconf  run_qdoc.bat
headers/pera_software/aidkit/qt/: AboutDialog.hpp  Application.hpp  Images.hpp  MainWindow.hpp
headers/pera_software/company/: AboutDialog.hpp  Application.hpp  PERA.hpp
integrate/: Dumper.cpp  Dumper.hpp  Endian.cpp  Endian.hpp  EndianTest.cpp  Enum.hpp  EnumTest.cpp  ErrNoException.cpp  ErrNoException.hpp  Exception.cpp  Exception.hpp  File.cpp  File.hpp  Format.cpp  Format.hpp  ScopeExit.hpp  Strings.cpp  Strings.hpp  Unicode.cpp  Unicode.hpp  UnicodeTest.cpp  Vector.cpp  Vector.hpp  VectorTest.cpp  VersionIndMessage.cpp  VersionIndMessage.hpp  VersionIndMessageTest.cpp  container_archive.hpp  container_buffer.cpp  container_buffer.hpp
integrate/AidKit1/: AidKit_Compiler.hpp  AidKit_Debugger.cpp  AidKit_Debugger.hpp  AidKit_FilePath.cpp  AidKit_FilePath.hpp  AidKit_Unix_Debug.cpp  AidKit_Unix_Debug.hpp  IntegerRange.cpp
integrate/AidKit2/: CMakeLists.txt
integrate/AidKit2/AidKit/: AidKit_Debug.cpp  AidKit_Debug.hpp  AidKit_Exception.cpp  AidKit_Exception.hpp  AidKit_Network.cpp  AidKit_Network.hpp  AidKit_Platform.cpp  AidKit_Platform.hpp  AidKit_ResourceMutex.hpp  AidKit_String.hpp  AidKit_Test.cpp  AidKit_Test.hpp
integrate/AidKit2/AidKit/Boost/: AidKit_Boost_DirectoryGuide.cpp  AidKit_Boost_DirectoryGuide.hpp  AidKit_Boost_Network.cpp  AidKit_Boost_Network.hpp
integrate/AidKit2/AidKit/Linux/: AidKit_Linux_FileType.cpp  AidKit_Linux_FileType.hpp  AidKit_Linux_Network.cpp  AidKit_Linux_Network.hpp
integrate/AidKit2/AidKit/Qt/: AidKit_Qt_Action.cpp  AidKit_Qt_Action.hpp  AidKit_Qt_DirectoryGuide.cpp  AidKit_Qt_DirectoryGuide.hpp  AidKit_Qt_Network.cpp  AidKit_Qt_Network.hpp  AidKit_Qt_StandardActions.cpp  AidKit_Qt_StandardActions.hpp
integrate/AidKit2/AidKit/Windows/: AidKit_Windows_Network.cpp  AidKit_Windows_Network.hpp
integrate/AidKit2/AidKitTests/: AidKit_Debug_Test.cpp  AidKit_Debug_Test.hpp  AidKit_Exception_Test.cpp  AidKit_Exception_Test.hpp  AidKit_Network_Test.cpp  AidKit_Network_Test.hpp  AidKit_ResourceMutex_Test.cpp  AidKit_ResourceMutex_Test.hpp  AidKit_Tests.cpp
obsolete/: errno_exception.cpp  errno_exception.hpp  file_exception.cpp  file_exception.hpp  file_impl.hpp  unicode.cpp
obsolete/qt/: Test.hpp
prototypes/: basic_file.hpp  file.hpp  file2.cpp  file2.hpp  static_array.cpp  static_array.hpp  temporary_file.hpp  unlocked_file.cpp  unlocked_file.hpp
resources/pera_software/: PERAResources.qrc  Resources.qrc
resources/pera_software/aidkit/: AidKitResources.qrc
resources/pera_software/company/: CompanyResources.qrc
sources/pera_software/aidkit/: AidKit.hpp
sources/pera_software/aidkit/qt/: AboutDialog.cpp  AidKit.cpp  Application.cpp  Images.cpp  MainWindow.cpp  MainWindow.hpp
sources/pera_software/company/: AboutDialog.cpp  Application.cpp  PERA.cpp
src/pera_software/: PERA.cpp  PERA.hpp  pera_software.cpp
src/pera_software/aidkit/: AidKit.cpp  AidKit.hpp  Exception.cpp  Exception.hpp  Platform.cpp  Platform.hpp  aidkit.cpp  aidkit.hpp  bit_cast.hpp  compiler.hpp  containers.cpp  containers.hpp  debug.cpp  debug.hpp  enum_class.hpp  enum_flags.cpp  enum_flags.hpp  exception.cpp  exception.hpp  main.cpp  main.hpp  overload_cast.hpp  platform.cpp  platform.hpp  string_ref.cpp  string_ref.hpp  strings.cpp  strings.hpp  unicode.cpp  unicode.hpp  vectors.cpp  vectors.hpp
src/pera_software/aidkit/boost/: directory_guide.cpp  directory_guide.hpp  formatter.cpp  formatter.hpp
src/pera_software/aidkit/concurrent/: blocking_queue.cpp  blocking_queue.hpp  data_mutex.cpp  data_mutex.hpp
src/pera_software/aidkit/container/: static_array.hpp
src/pera_software/aidkit/cpp/: memory.cpp  memory.hpp  new.cpp  new.hpp  optional.cpp  optional.hpp  stdlib.hpp  string_ref.cpp  string_ref.hpp
src/pera_software/aidkit/io/: ErrNoException.cpp  ErrNoException.hpp  File.cpp  File.hpp  UnlockedFile.cpp  UnlockedFile.hpp  basic_file.cpp  basic_file.hpp  errno.cpp  errno.hpp  errno_exception.cpp  errno_exception.hpp  file.cpp  file.hpp  file_error.cpp  file_error.hpp  file_exception.cpp  file_exception.hpp  file_impl.cpp  file_impl.hpp  file_ptr.cpp  file_ptr.hpp  files.cpp  files.hpp  system_error.cpp  system_error.hpp  temporary_file.cpp  temporary_file.hpp  unlocked_file.cpp  unlocked_file.hpp
src/pera_software/aidkit/msvc/: crtdbg.hpp  crtdebug_heap.cpp  crtdebug_heap.hpp
src/pera_software/aidkit/qt/: PERAForwardDeclarations.hpp  Resources.cpp  Resources.hpp  qt.cpp
src/pera_software/aidkit/std/: optional.cpp  optional.hpp  string_ref.cpp  string_ref.hpp
src/pera_software/company/: PERA.cpp  PERA.hpp
tests/pera_software/aidkit/: compiler_test.cpp  containers_test.cpp  containers_test.hpp  debug_test.cpp  debug_test.hpp  enum_class_test.cpp  enum_class_test.hpp  enum_flags_test.cpp  enum_flags_test.hpp  run_tests.cpp  strings_test.cpp  strings_test.hpp  test_main.cpp  test_main.hpp  unicode_test.cpp  unicode_test.hpp  vectors_test.cpp  vectors_test.hpp
translations/: AidKitTranslations.qrc  AidKitTranslations_de.ts
(+158 files in other folders)
